# OPP

./: .gitignore  .gitignore.swp
Lab_1/: CMakeLists.txt  V0.c  V1FullResults  V1_4v2.c  V2FullResults  V2_1.c  main.c  queueClasterScript  si  si.c  sim.c  sim1  simv2.c  simv2.out
Lab_2/: CMakeLists.txt  V0  V0.c  V0_1.c  V0_2.c  V1.c  V1.out  V2.c
Lab_3/: CMakeLists.txt  lab3.clog2  lab3.slog2  lab3Log.clog2  lab3Log.slog2  main.c  main.out  main2.c  mainOld.c
Lab_4/: CMakeLists.txt  JacobiSolver.cpp  JacobiSolver.h  a.out  log.clog2  log.slog2  main.cpp  main.out
Lab_5/: CMakeLists.txt  Exceptions.h  Sender.cpp  Task.h  TaskQueue.cpp  TaskQueue.h  Worker.cpp  Worker.h  build.sh  color.h  main.cpp  mainC  task_queue.cpp  task_queue.h
Lab_5/include/: Exceptions.h  Receiver.h  Sender.h  TaskQueue.h  Worker.h
Lab_5/logs/: log_balanced.clog2  log_unbalanced.clog2  log_unbalanced.slog2
Lab_5/src/: Receiver.cpp  Sender.cpp  Task.cpp  TaskQueue.cpp  Worker.cpp  main.cpp
Lab_5_/: task_queue.h
Lab_5_c/: CMakeLists.txt  main.cpp
Lab_5_was/: Receiver.h  Sender.cpp  Sender.h  Task.cpp  TaskQueue.cpp  TaskQueue.h  Worker.cpp  Worker.h  build.sh  colors.h  main.cpp  n5.cpp
Lab_5c/: CMakeLists.txt  build.sh  main  main.c
Lab_5git/: CMakeLists.txt  Defines.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  Task.cpp  Task.h  TaskQueue.cpp  TaskQueue.h  Worker.cpp  Worker.h  log_balanced.slog2  main.c  main.cpp  mainC  mainC.c
